<resources>
    <string name="app_name">AlcoAware</string>
    <!--Login-->
    <string name="welcome_message">Welcome to AlcoAware!</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="sign_up_prompt">아직 계정이 없나요?&#10; 회원가입을 위해 버튼을 클릭하세요</string>

    <!--SignUp-->
    <string name="sign_up">회원가입</string>
    <string name="confirm_pw">비밀번호 확인</string>

    <!--user info-->
    <string name="user_info_text">사용자 정보</string>
    <string name="name">이름</string>
    <string name="name_ex">예) 홍길동</string>
    <string name="age">출생년도</string>
    <string name="age_ex">예) 1998</string>
    <string name="region_hint">거주 지역</string>
    <string name="submit_text">제출</string>

    <!--main-->
    <string name="selected_date">선택한 날짜</string>
    <string name="record_btn_text">기록 페이지 이동</string>
    <string name="logout">로그아웃</string>

    <!--record-->
    <string name="btn_start_text">Start</string>
    <string name="btn_stop_text">Stop</string>
    <string name="status_off">기록되고 있지 않습니다</string>
    <string name="status_on">기록 중...</string>
    <string name="main_page">메인 화면</string>
    <string name="drinking_on">음주 중...</string>
    <string name="drinking_off">음주 중이 아닙니다</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="title_activity_record_worker">RecordWorker</string>

</resources>