<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/form_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/appTitle"
            android:text="@string/user_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_light"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            android:onClick="hideKeyboard"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name_ex"/>

        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@layout/edittext_rounded"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/age_ex"/>

        <EditText
            android:id="@+id/age"
            android:hint="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="12dp"
            android:background="@layout/edittext_rounded"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/region_ex"/>

        <EditText
            android:id="@+id/region"
            android:hint="@string/region_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@layout/edittext_rounded"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@layout/edittext_rounded"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/drink_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@layout/edittext_rounded"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/drink_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@layout/edittext_rounded"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:text="@string/submit_text"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@layout/rounded_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/form_container"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"/>

</RelativeLayout>
